--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     <li>Wieder anderes</li>
 </ul>
 
+//TODO LIST APP
+
+// Create a "close" button and append it to each list item
+//window.onload = function(){//<---That is very important cause of html rendering!!
+//window.addEventListener("load", function(){
 
 <script>
     var myNodelist = document.getElementsByTagName("LI");
